Revision history for perl module Module::Info

0.35_01 2015-06-15 NEILB
    - Dropped B::BUtils in favour of using the standard B::Utils.
      subroutines_called() stopped working correctly for standard function
      calls, identifying them as calls via symbolic references. Fixed that.

0.35 2013-09-08 14:10:31 CEST
    - Handle 'package NAME VERSION' syntax (patch by Norbert Gruener)
    - Added repository and license info to metadata
    - Tweaked format of Changes (this file) to match CPAN::Changes::Spec

0.34 2013-05-21 21:48:49 CEST
    - Replace Test::Soundex in tests with Class::Struct, since
      Text::Soundex will not be in core in Perl 5.19 and up.
    - Replace ExtUtils::MY_Metafile with META_MERGE in Makefile.PL.

0.33 2013-02-9 13:12:22 CET
    - Fix tests under Perl 5.6.2 when some core modules have been
      upgraded (patch by Andreas Koenig).

0.32 2010-09-8 23:15:13 CEST
    - Add archlib and privlib to the search path for core modules
      (patch by Jonas B. Nielsen).

0.31_01 2010-04-12 23:53:53 CEST
    - Many test fixes.

0.31 2007-05-28 21:40:10 CEST
    - Fixed tests in presence of version.pm 0.72 or newer.
    - Added -h option to module_info.

0.30 2005-12-20 20:17:09 CET
    - Renamed the forked B::Utils to B::BUtils to avoid clashes
      until it is merged into the mainline.

0.29 2005-11-22 21:28:26 CET
    - Fixed version() for complex expressions.
    - Corrected some POD errors in module_info.

0.28_50 2005-07-10 21:48:19 CEST
    - Added support for version.pm (based upon a
      patch by John Peacock).
    - Fixed the safe() attribute to be per-object instead
      of global.

0.28 2005-04-17 17:10:33 CET
    - Correct the attributions of the fixes in 0.27 (I swapped
      authors' names).
    - Added Module::Build support as an alternative to
      ExtUtils::MakeMaker.
    - Added safe() option to forbid unsafe operations (currently
      executes version() code in a Safe compartment and forbids most
      other operations).