@@ -1,4 +1,3 @@
-Build.PL
 Changes
 MANIFEST
 META.yml
