@@ -4,6 +4,7 @@ Revision history for perl module Module::Info
     - Dropped B::BUtils in favour of using the standard B::Utils.
       subroutines_called() stopped working correctly for standard function
       calls, identifying them as calls via symbolic references. Fixed that.
+    - Dropped Build.PL
 
 0.35 2013-09-08 14:10:31 CEST
     - Handle 'package NAME VERSION' syntax (patch by Norbert Gruener)
